    * Perlcritic has a new command option, --document-type, which overrides
      perlcritic's document type logic. This takes one of three values:
      - 'script' causes all documents to be considered scripts;
      - 'module' causes all documents to be considered modules;
      - 'auto' is an explicit request to use perlcritic's normal document type
        logic, and is the default.

[1.101_001] Released on 2009-07-21

    Bug fixes:
    * Works with PPI 1.204_05.  Yay for 5.10 support!
    * Variables::RequireLexicalLoopIterators didn't work correctly on foreach
      loops with labels.

[1.100] Released on 2009-07-17

    This is a POD fix release to deal with issues identified by Test::POD
    1.40.  There is no functional difference between this release and 1.098.
    This is the last release of Perl::Critic that will be compatible with PPI
    1.203.  PPI's parsing of for(each)? loops is changing in its next release
    in an incompatible manner and there will be a release in the near future
    to make Perl::Critic compatible with that change.

[1.099_002] Released on 2009-06-27

    Performance Improvements:
    * We've been able to get a 30% improvement in the performance by
      adding caching to some methods in PPI.  Your actual performance
      gains may differ, depending on your configuration.  In general,
      you'll notice a bigger speedup if you use a lot of Policies and
      your source files are really large.  This code is highly experimental
      and may be abandoned in the next release.

[1.099_001] Released on 2009-06-25

    New Policies:
      Objects::ProhibitIndirectSyntax
      ValuesAndExpressions::ProhibitComplexVersion
      ValuesAndExpressions::RequireConstantVersion

    New Features:
    * Perlcritic will list the names of files with violations if given the
      --files-with-violations option, or the names of files without
      violations if given the --files-without-violations options. These