@@ -1,0 +1,3 @@
+foo
+#line 57 Thingy.pm
+bar
