@@ -14,6 +14,9 @@ Next release, whenever it is:
       - 'module' causes all documents to be considered modules;
       - 'auto' is an explicit request to use perlcritic's normal document type
         logic, and is the default.
+    * Perl::Critic::Violation now takes #line directives into account in the
+      %F, %f, and %l formats.  You can get the old values via the new %G, %g,
+      %and %L formats.
 
 [1.101_001] Released on 2009-07-21
 
